--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ endColorstr = '#f3f3f3' )";
 /*layout*/
 .wrap{width: 960px;margin:0 auto;}
 #header{height:30px;}
-#nav{height: 95px;background-color: #cdcd00;}
+#nav{height: 95px;background-color: #fff;}
 #search{height: 127px;border: 1px solid #dbdbdb;-webkit-border-radius: 6px;-moz-border-radius: 6px;border-radius: 6px;}
 .main-wrap,.side-wrap{margin-top: 10px;}
 .main-wrap{width: 712px;}
@@ -74,3 +74,35 @@ IE6-7下margin-bottom失效的问题:
 .link a:hover{color:#cd0000;}
 .link .join{background-position: 0px 2px;}
 .link .manage{background-position: 0px -40px;_background-position:0px -42px;}
+
+/*导航*/
+#nav{position: relative;}
+#nav ul{padding-top:14px;}
+#nav ul li{width: 66px;float: left;text-align: center;}
+#nav ul li a{color: #333333;padding-top: 50px;;display:block;width: 100%;height: 100%;background: url("../img/btn_sprite.png") 5px 0px  no-repeat;-webkit-transition: all 0.5s ease;-moz-transition: all 0.5s ease;-ms-transition: all 0.5s ease;-o-transition: all 0.5s ease;transition: all 0.5s ease;}
+#nav .nav1{position: absolute;top: 0px;left:16px;}
+#nav .nav2{position: absolute;top: 0px;right:16px;}
+#nav h1{width: 223px;height: 62px;margin: 0 auto;padding-top:16px;}
+#nav h1 img{width: 100%;}
+/*在ie6等远古浏览器中，只有a才支持hover，要么用a标签来做，要么用js来解决*/
+/*用js甚至可以在ie6下实现transition*/
+#nav ul li.nav-bg-1 a{background-position:5px 0px;}
+#nav ul li.nav-bg-1 a:hover{background-position: 5px -66px;}
+#nav ul li.nav-bg-2 a{background-position:-60px 0px;}
+#nav ul li.nav-bg-2 a:hover{background-position: -60px -66px;}
+#nav ul li.nav-bg-3 a{background-position:-126px 0px;}
+#nav ul li.nav-bg-3 a:hover{background-position: -126px -66px;}
+#nav ul li.nav-bg-4 a{background-position:-192px 0px;}
+#nav ul li.nav-bg-4 a:hover{background-position: -192px -66px;}
+#nav ul li.nav-bg-5 a{background-position:-256px 0px;}
+#nav ul li.nav-bg-5 a:hover{background-position: -256px -66px;}
+#nav ul li.nav-bg-6 a{background-position:-324px 0px;}
+#nav ul li.nav-bg-6 a:hover{background-position: -324px -66px;}
+#nav ul li.nav-bg-7 a{background-position:-389px 0px;}
+#nav ul li.nav-bg-7 a:hover{background-position: -389px -66px;}
+#nav ul li.nav-bg-8 a{background-position:-456px 0px;}
+#nav ul li.nav-bg-8 a:hover{background-position: -456px -66px;}
+#nav ul li.nav-bg-9 a{background-position:-522px 0px;}
+#nav ul li.nav-bg-9 a:hover{background-position: -522px -66px;}
+#nav ul li.nav-bg-10 a{background-position:-588px 0px;}
+#nav ul li.nav-bg-10 a:hover{background-position: -588px -66px;}
