--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@ endColorstr = '#f3f3f3' )";
 .wrap{width: 960px;margin:0 auto;}
 #header{height:30px;}
 #nav{height: 95px;background-color: #fff;}
-#search{position: relative;height: 127px;border: 1px solid #dbdbdb;-webkit-border-radius: 6px;-moz-border-radius: 6px;border-radius: 6px;}
+#search{position: relative;height: 114px;border: 1px solid #dbdbdb;-webkit-border-radius: 6px;-moz-border-radius: 6px;border-radius: 6px;}
 .main-wrap,.side-wrap{margin-top: 10px;}
 .main-wrap{width: 712px;}
 .main{padding-bottom: 10px;}
@@ -111,6 +111,32 @@ IE6-7下margin-bottom失效的问题:
 /*search*/
 /*box-shadow和border-radius虽然都是css3的属性，但是支持它的浏览器都只有一种写法就行了*/
 #search .search-tab{position: absolute;z-index: 2;top: -11px;left: 226px;}
-#search .search-tab li{cursor: pointer;background-color: #fff;;float: left;width: 78px;height: 26px;line-height: 26px;margin-right: 1px;text-align: center;border: 1px solid #f8d0bf;border-radius: 5px 5px 0 0;border-bottom:none;color:#000;}
+#search .search-tab li{cursor: pointer;background-color: #fff;;float: left;width: 78px;height: 26px;line-height: 26px;margin-right: 1px;text-align: center;border: 1px solid #f8d0bf;border-radius: 5px 5px 0 0;border-bottom:none;color:#000;box-shadow:0px -1px 1px #e3e3e3;}
 #search .search-tab .active{color: #fff;text-shadow:1px 2px 1px #b71701;position: relative;top: -1px;height: 28px;background-color: #e21c01;border-color: #c40d0e;}
 #search .search-bar{position: absolute;left: -1px;top: 16px;width: 958px;height: 65px;border: 1px solid #c40d0e;background-color: #e21c01;box-shadow:1px 1px 2px #d2d2d2;border-radius: 5px}
+
+.search-bar .tag{position:absolute;left: 32px;top: -21px;}
+.search-bar form{position: absolute;top: 20px;left: 226px;}
+.search-bar form input{float: left;}
+.search-bar form .text{outline: none;border:none;width: 382px;height: 22px;line-height: 24px;padding: 0 10px;border-radius: 3px;box-shadow: 1px 2px 2px #ca8c83 inset;color: #ea7a7a;}
+.search-bar form .btn{margin-left: 10px;width: 62px;height: 24px;border:none;background: url("../img/btn.png") no-repeat;}
+.search-bar .hot-search{width: 204px;height: 32px;color: #fff;position: absolute;top: 14px;right: 38px;}
+.search-bar .hot-search p{line-height: 18px;}
+
+/*arrow*/
+/*overflow:hidden这一句很重要，用css写的三角形除了在ie6下有点小问题，其他的浏览器基本都能正常使用*/
+.arrow{cursor: pointer;display: block;overflow: hidden;width: 0;height: 0;border:4px solid #cc0d13;border-color:transparent;_border-color:#fff;}
+.a-up-red{border-bottom-color:#cc0d13;}
+.a-down-red{border-top-color:#cc0d13;}
+.a-down-grey{border-top-color:#c1c1c1;}
+
+/*update*/
+.update{width: 408px;height: 33px;position: absolute;bottom: 0;left: 224px;background: url("../img/update.png") 0px 10px no-repeat;}
+.update .update-wrap{height: 33px;overflow: hidden;float: left;}
+.update .update-wrap ul li{width: 338px;height: 33px;line-height: 33px;padding-left: 60px;}
+.update .update-wrap ul li a{color: #000;}
+.update .update-wrap ul li a:hover{text-decoration: underline;}
+.update .update-wrap ul li a em{color: #d30703;}
+.update .update-wrap ul li a span{color:#999999;}
+.update .arrow-wrap{padding-top: 7px;}
+.arrow-wrap .a-up-red{margin-bottom: 5px;}
