--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,8 @@ IE6-7下margin-bottom失效的问题:
 .search-bar form .btn{margin-left: 10px;width: 62px;height: 24px;border:none;background: url("../img/btn.png") no-repeat;}
 .search-bar .hot-search{width: 204px;height: 32px;color: #fff;position: absolute;top: 14px;right: 38px;}
 .search-bar .hot-search p{line-height: 18px;}
+.search-bar .hot-search p a{color: #fff;}
+.search-bar .hot-search p a:hover{text-decoration: underline;}
 
 /*arrow*/
 /*overflow:hidden这一句很重要，用css写的三角形除了在ie6下有点小问题，其他的浏览器基本都能正常使用*/
@@ -178,9 +180,9 @@ li .model-title{_padding-top:6px;}
 
 /*calendar*/
 #date{background: url("../img/calendar.jpg") top center no-repeat;}
-.daily{width:100%;height: 72px;position: relative;}
+.daily,.recom{width:100%;height: 72px;position: relative;}
 .daily span,
-.daily h3{position: absolute;}
+.daily h3{position: absolute;font-size: 22px;font-weight: normal;}
 .daily .en{color:#ea2b31;font-size: 10px;font-family: "Arial";top: 12px;left:24px;font-weight: bold;}
 .daily .ch{color:#333333;font-size: 24px;top:26px;left:24px;}
 .daily .time{color:#ec1c16;font-size: 30px;top: 16px;left: 128px;}
@@ -197,7 +199,7 @@ li .model-title{_padding-top:6px;}
 .clen dd#today{background:url("../img/show-min.jpg") 0px 0px no-repeat;}
 .clen dd#ac1{background:url("../img/pizza-min.jpg") 0px 0px no-repeat;}
 /*鼠标移入显示内容*/
-.hover-wrap{width: 318px;height: 108px;border: 1px solid #c0c0c0;box-shadow: 4px 4px 1px #bfbfbf;}
+.hover-wrap{display: none;width: 318px;height: 108px;border: 1px solid #c0c0c0;box-shadow: 4px 4px 1px #bfbfbf;}
 .hover-info{padding: 10px 15px;position: relative;}
 .hover-info .big{border: 2px solid #dddddd;}
 .hover-info h3{color: #333333;font-size: 10px;}
@@ -208,4 +210,18 @@ li .model-title{_padding-top:6px;}
 .hover-info a{float: right;}
 .hover-info .arrow{width: 8px;height: 16px;border: 0px;position: absolute;top:47px;left:-8px;z-index: 999;}
 .hover-content{width: 199px;height: 86px;}
+
+/*精彩推荐*/
+#recom{background: url("../img/rec-sp.png") 120px 0px no-repeat;}
+/*slider*/
+.slider-wrap{width:295px;height: 144px;background-color: #f8f8f8;padding:12px 10px;}
+.slider-wrap .big-slider{position: relative;width: 224px;height: 134px;}
+.slider-wrap .big-slider li{position: absolute;top: 0;left: 0;width: 100%;height: 100%;display: none;}
+.slider-wrap .big-slider .active{display:block;}
+.slider-wrap .slider-text{height: 14px;overflow: hidden;zoom: 1;clear: both;}
+.slider-wrap .slider-text li{color: #000;}
+.slider-wrap .tab-slider{width: 60px;height: 135px;float: right;}
+.slider-wrap .tab-slider li{width: 54px;height: 32px;border: 4px solid #f8f8f8;margin-bottom: 9px;}
+.slider-wrap .tab-slider li img{width: 54px;height: 32px;}
+.slider-wrap .tab-slider .active{border-color: #d6191d;}
 
